[gd_scene load_steps=28 format=3 uid="uid://b82arvt5tvxws"]

[ext_resource type="Texture2D" uid="uid://duc35on01lkym" path="res://Assets/settings_ui.png" id="1_83j8s"]
[ext_resource type="PackedScene" uid="uid://bcx5uy6l4ah55" path="res://scenes/player.tscn" id="1_r6d6q"]
[ext_resource type="Script" uid="uid://dy0lgxw2q1mpy" path="res://Scripts/main.gd" id="1_wqwn7"]
[ext_resource type="Texture2D" uid="uid://bv2y58csvaxcg" path="res://Assets/Backboard.png" id="2_gjs24"]
[ext_resource type="PackedScene" uid="uid://dptewxphp6knb" path="res://scenes/menu_1.tscn" id="4_7kvyq"]
[ext_resource type="Texture2D" uid="uid://noqdjlettf8x" path="res://Assets/back_button.png" id="4_am25x"]
[ext_resource type="PackedScene" uid="uid://dx8s3r2wro8ui" path="res://scenes/vibration_button.tscn" id="6_4ppmf"]
[ext_resource type="PackedScene" uid="uid://c0ekoss56pd6k" path="res://scenes/keyboard_button.tscn" id="7_gjs24"]
[ext_resource type="PackedScene" uid="uid://cn84bwhfoxfwm" path="res://scenes/language_dropdown.tscn" id="8_am25x"]
[ext_resource type="PackedScene" uid="uid://ctiv10t08kqc" path="res://scenes/tick_box.tscn" id="9_4ppmf"]
[ext_resource type="PackedScene" uid="uid://b5vo4d1p8pdjs" path="res://scenes/menu_button.tscn" id="9_am25x"]
[ext_resource type="PackedScene" uid="uid://cxmy3crem7p3c" path="res://scenes/text.tscn" id="9_uhhto"]
[ext_resource type="PackedScene" uid="uid://coklkihdr0eb0" path="res://scenes/game_end.tscn" id="10_6dbjw"]
[ext_resource type="Texture2D" uid="uid://ba8c05suvrne0" path="res://Assets/play.png" id="11_01roj"]
[ext_resource type="Texture2D" uid="uid://cmmqad3vnbxg0" path="res://Assets/block.png" id="12_k00b3"]
[ext_resource type="Texture2D" uid="uid://ci17ft1qkefge" path="res://Assets/settings.png" id="12_wqwn7"]
[ext_resource type="Texture2D" uid="uid://d1arwq5uc1o5e" path="res://Assets/exit.png" id="13_oe2nd"]
[ext_resource type="FontFile" uid="uid://8dyva5k5h5pq" path="res://Assets/ttf/monogram-extended.ttf" id="15_oe2nd"]
[ext_resource type="AudioStream" uid="uid://b226xomei2kld" path="res://Assets/SoupTonic UI1 SFX Pack 1 - ogg/SFX_UI_Cancel.ogg" id="17_ql1j0"]
[ext_resource type="Script" uid="uid://6pstq4xh2hd4" path="res://Scripts/credits.gd" id="19_g5y2q"]
[ext_resource type="AudioStream" uid="uid://c8y3ipnpbwl53" path="res://Assets/bg_music.ogg" id="21_aisiw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aisiw"]
size = Vector2(64, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f4mfi"]
size = Vector2(337, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oe2nd"]
size = Vector2(1174, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ql1j0"]
size = Vector2(909, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kvyq"]
size = Vector2(21, 894)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dbjw"]
size = Vector2(1196.5, 393.5)

[node name="settings" type="Node2D" node_paths=PackedStringArray("menus")]
texture_filter = 1
script = ExtResource("1_wqwn7")
menus = [NodePath("Menu1"), NodePath("Menu2")]

[node name="SettingsUi" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 356)
scale = Vector2(4, 4)
texture = ExtResource("1_83j8s")

[node name="SettingsUi2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-576, 356)
scale = Vector2(4, 4)
texture = ExtResource("1_83j8s")

[node name="SettingsUi3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, -338)
rotation = 3.14159
scale = Vector2(4, 4)
texture = ExtResource("1_83j8s")

[node name="Backboard" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 412)
scale = Vector2(4, 4)
texture = ExtResource("2_gjs24")

[node name="Menu1" parent="." instance=ExtResource("4_7kvyq")]

[node name="VibrationButton" parent="Menu1" instance=ExtResource("6_4ppmf")]
position = Vector2(600, 592)

[node name="KeyboardButton" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(248, 248)
action = "up"
first_key = "Z"

[node name="LanguageDropdown" parent="Menu1" instance=ExtResource("8_am25x")]
position = Vector2(936, 241)

[node name="TickBox" parent="Menu1" instance=ExtResource("9_4ppmf")]
position = Vector2(772, 592)

[node name="Text" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 81.0
offset_top = 152.0
offset_right = 273.0
offset_bottom = 203.0
english = "Controls"
german = "Steuerung"
dutch = "Besturing"
polish = "Sterowanie"

[node name="KeyboardButton2" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(408, 328)
is_unlocked = true
action = "right"
first_key = "V"

[node name="KeyboardButton3" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(88, 328)
action = "left"
first_key = "P"

[node name="KeyboardButton4" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(248, 408)
broken = true
action = "down"
first_key = "S"

[node name="Text2" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 819.0
offset_top = 151.0
offset_right = 1179.0
offset_bottom = 227.0
text = "Language"
english = "Language"
german = "Sprache"
dutch = "Taal"
polish = "Język"

[node name="Text3" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 153.0
offset_top = 286.0
offset_right = 345.0
offset_bottom = 337.0
theme_override_font_sizes/font_size = 48
text = "up"
horizontal_alignment = 1
english = "up"
german = "hoch"
dutch = "omhoog"
polish = "góra"

[node name="Text4" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 52.0
offset_top = 370.0
offset_right = 244.0
offset_bottom = 421.0
theme_override_font_sizes/font_size = 48
text = "left"
english = "left"
german = "links"
dutch = "links"
polish = "lewo"

[node name="Text5" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 370.0
offset_top = 367.0
offset_right = 562.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 48
text = "right"
english = "right"
german = "rechts"
dutch = "rechts"
polish = "prawo"

[node name="Text7" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 536.0
offset_top = 315.0
offset_right = 719.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 48
text = "jump"
horizontal_alignment = 2
english = "jump"
german = "sprung"
dutch = "sprong"
polish = "skok"

[node name="Text8" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 716.0
offset_top = 549.0
offset_right = 941.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 48
text = "grab"
horizontal_alignment = 2
english = "grab"
german = "greifen"
dutch = "grijpen"
polish = "chwyt"

[node name="Text6" parent="Menu1" instance=ExtResource("9_uhhto")]
offset_left = 154.0
offset_top = 453.0
offset_right = 346.0
offset_bottom = 504.0
theme_override_font_sizes/font_size = 48
text = "down"
horizontal_alignment = 1
english = "down"
german = "runter"
dutch = "omlaag"
polish = "dół"

[node name="KeyboardButton5" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(766, 337)
action = "jump"
first_key = "BracketRight"

[node name="KeyboardButton6" parent="Menu1" instance=ExtResource("7_gjs24")]
position = Vector2(990, 572)
action = "grab"
first_key = "Apostrophe"

[node name="Menu2" parent="." instance=ExtResource("4_7kvyq")]

[node name="GameEnd" parent="Menu2" node_paths=PackedStringArray("root") instance=ExtResource("10_6dbjw")]
position = Vector2(837, 265)
root = NodePath("../..")

[node name="Label" type="Label" parent="Menu2"]
offset_left = 308.0
offset_top = 333.0
offset_right = 1070.0
offset_bottom = 453.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_oe2nd")
theme_override_font_sizes/font_size = 48
text = "* Level two will come some time maybe idk, if I feel like updating this game, hope you enjoyed"
autowrap_mode = 2

[node name="Blocks" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Blocks"]
position = Vector2(-963, 462)
scale = Vector2(3.01389, 0.843675)

[node name="Block" type="Sprite2D" parent="Blocks/StaticBody2D"]
scale = Vector2(4, 4)
texture = ExtResource("12_k00b3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aisiw")
metadata/_edit_lock_ = true

[node name="StaticBody2D5" type="StaticBody2D" parent="Blocks"]
position = Vector2(-460, 260)
scale = Vector2(3.01389, 0.843675)

[node name="Block" type="Sprite2D" parent="Blocks/StaticBody2D5"]
scale = Vector2(4, 4)
texture = ExtResource("12_k00b3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D5"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aisiw")
metadata/_edit_lock_ = true

[node name="StaticBody2D2" type="StaticBody2D" parent="Blocks"]
position = Vector2(-716, 386)
scale = Vector2(0.847592, 0.681613)

[node name="Block" type="Sprite2D" parent="Blocks/StaticBody2D2"]
scale = Vector2(4, 4)
texture = ExtResource("12_k00b3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D2"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aisiw")
metadata/_edit_lock_ = true

[node name="StaticBody2D3" type="StaticBody2D" parent="Blocks"]
position = Vector2(-264, 208)
scale = Vector2(0.613693, 5.37188)

[node name="Block" type="Sprite2D" parent="Blocks/StaticBody2D3"]
scale = Vector2(4, 4)
texture = ExtResource("12_k00b3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D3"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aisiw")
metadata/_edit_lock_ = true

[node name="StaticBody2D4" type="StaticBody2D" parent="Blocks"]
position = Vector2(-828, 193)
scale = Vector2(0.670441, 2.16012)

[node name="Block" type="Sprite2D" parent="Blocks/StaticBody2D4"]
scale = Vector2(4, 4)
texture = ExtResource("12_k00b3")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/StaticBody2D4"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_aisiw")
metadata/_edit_lock_ = true

[node name="BackButton" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 592.0
offset_right = 73.0
offset_bottom = 607.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_am25x")

[node name="Text" parent="BackButton" instance=ExtResource("9_uhhto")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.75
offset_top = -7.75
offset_right = 162.25
offset_bottom = 43.25
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
text = "Zurück"
horizontal_alignment = 2
english = "Back"
german = "Zurück"
dutch = "Terug"
polish = "Wstecz"

[node name="StaticBody2D" type="StaticBody2D" parent="BackButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackButton/StaticBody2D"]
position = Vector2(-127.5, 7.5)
shape = SubResource("RectangleShape2D_f4mfi")

[node name="MenuButton" parent="." node_paths=PackedStringArray("menu") instance=ExtResource("9_am25x")]
position = Vector2(160, 108)
menu = NodePath("../Menu1")

[node name="MenuButton2" parent="." node_paths=PackedStringArray("menu") instance=ExtResource("9_am25x")]
position = Vector2(574, 108)
menu = NodePath("../Menu2")
type = 2

[node name="Player" parent="." instance=ExtResource("1_r6d6q")]
position = Vector2(102, 544)
scale = Vector2(4, 4)

[node name="exit" type="TextureButton" parent="."]
offset_left = -615.0
offset_top = 420.0
offset_right = -575.0
offset_bottom = 460.0
scale = Vector2(4, 4)
texture_normal = ExtResource("13_oe2nd")

[node name="play" type="TextureButton" parent="."]
offset_left = -619.0
offset_top = 125.0
offset_right = -579.0
offset_bottom = 165.0
scale = Vector2(4, 4)
texture_normal = ExtResource("11_01roj")

[node name="settings" type="TextureButton" parent="."]
offset_left = -625.0
offset_top = 268.0
offset_right = -585.0
offset_bottom = 308.0
scale = Vector2(4, 4)
texture_normal = ExtResource("12_wqwn7")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-576, 356)

[node name="error" type="Label" parent="."]
visible = false
offset_left = -971.0
offset_top = 63.0
offset_right = -125.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("15_oe2nd")
theme_override_font_sizes/font_size = 48
text = "* If play button is not working, check settings"

[node name="Border" type="StaticBody2D" parent="." groups=["unclingable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border"]
position = Vector2(577, -179)
shape = SubResource("RectangleShape2D_oe2nd")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Border"]
position = Vector2(-583, -4)
shape = SubResource("RectangleShape2D_oe2nd")

[node name="dividor" type="CollisionShape2D" parent="Border"]
position = Vector2(-10, 264.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ql1j0")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Border"]
position = Vector2(1164.5, 262)
shape = SubResource("RectangleShape2D_7kvyq")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Border"]
position = Vector2(-1152, 318.25)
shape = SubResource("RectangleShape2D_7kvyq")

[node name="FallArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallArea"]
position = Vector2(576.75, 910.25)
shape = SubResource("RectangleShape2D_6dbjw")
debug_color = Color(0.997623, 0, 0.161783, 0.42)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_ql1j0")

[node name="Credits" type="Label" parent="."]
offset_left = -853.0
offset_top = 109.0
offset_right = -277.0
offset_bottom = 516.0
theme_override_fonts/font = ExtResource("15_oe2nd")
theme_override_font_sizes/font_size = 48
text = "Credits
Developer - Daniel Lee

Assets (linked in itch)
Player art - Kevin's Mom's House
Keyboard art - Dream Mix
Font - datagoblin
Sound effects - SoupTonic

"
horizontal_alignment = 1
script = ExtResource("19_g5y2q")

[node name="Timer" type="Timer" parent="Credits"]
wait_time = 0.1

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_aisiw")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="body_entered" from="FallArea" to="." method="_on_fall_area_body_entered"]
[connection signal="timeout" from="Credits/Timer" to="Credits" method="_on_timer_timeout"]
